package assignment4;

public class BoardDecorator {

    protected Board board;

    public BoardDecorator()
    {
        this.board = new Board();
    }
}
