package assignment4;

public enum GameModes {
    EASY, MEDIUM, STRONG
}
