package assignment4;

public enum MenuOptions {
    Exit,
    SinglePlayer,
    MultiPlayer,
}
