package assignment4;

public interface VirtualPlayer {
    public int MakeAChoise(char[][] board);
}
