@startuml

title __PROJECT's Class Diagram__\n

  namespace assignment4 {
    class assignment4.Board {
    }
  }
  

  namespace assignment4 {
    class assignment4.BoardDecorator {
    }
  }
  

  namespace assignment4 {
    class assignment4.ConsoleUI {
    }
  }
  

  namespace assignment4 {
    class assignment4.DebugProxy {
    }
  }
  

  namespace assignment4 {
    class assignment4.DecoratedBoard {
    }
  }
  

  namespace assignment4 {
    class assignment4.Game {
    }
  }
  

  namespace assignment4 {
    class assignment4.GameAspect {
    }
  }
  

  namespace assignment4 {
    enum GameModes {
    }
  }
  

  namespace assignment4 {
    class assignment4.LogUI {
    }
  }
  

  namespace assignment4 {
    class assignment4.Main {
    }
  }
  

  namespace assignment4 {
    enum MenuOptions {
    }
  }
  

  namespace assignment4 {
    interface assignment4.UserInterface {
    }
  }
  

  namespace assignment4 {
    class assignment4.UserInterfaceDecorator {
    }
  }
  

  namespace assignment4 {
    interface assignment4.VirtualPlayer {
    }
  }
  

  namespace assignment4 {
    class assignment4.VirtualPlayerEasy {
    }
  }
  

  namespace assignment4 {
    class assignment4.VirtualPlayerFactory {
    }
  }
  

  namespace assignment4 {
    class assignment4.VirtualPlayerMedium {
    }
  }
  

  namespace tests {
    class tests.BoardTests {
    }
  }
  

  namespace tests {
    class tests.GameTest {
    }
  }
  

  namespace tests {
    class tests.UserInerfaceTests {
    }
  }
  

  namespace tests {
    class tests.VirtualPlayerTests {
    }
  }
  

  assignment4.BoardDecorator o-- assignment4.Board : board
  assignment4.ConsoleUI .up.|> assignment4.UserInterface
  assignment4.DebugProxy .up.|> java.lang.reflect.InvocationHandler
  assignment4.DecoratedBoard -up-|> assignment4.BoardDecorator
  assignment4.LogUI -up-|> assignment4.UserInterfaceDecorator
  assignment4.UserInterfaceDecorator .up.|> assignment4.UserInterface
  assignment4.UserInterfaceDecorator o-- assignment4.UserInterface : userInterfaceToBeDecorated
  assignment4.VirtualPlayerEasy .up.|> assignment4.VirtualPlayer
  assignment4.VirtualPlayerMedium .up.|> assignment4.VirtualPlayer
  tests.BoardTests o-- assignment4.UserInterface : userInterface
  tests.VirtualPlayerTests o-- assignment4.UserInterface : userInterface


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
